@@ -17,14 +17,17 @@
 package org.apache.lucene.util.mutable;
 
 /**
- * {@link MutableValue} implementation of type 
- * <code>int</code>.
+ * {@link MutableValue} implementation of type <code>int</code>.
+ * When mutating instances of this object, the caller is responsible for ensuring 
+ * that any instance where <code>exists</code> is set to <code>false</code> must also 
+ * <code>value</code> set to <code>0</code> for proper operation.
  */
 public class MutableValueInt extends MutableValue {
   public int value;
   
   @Override
   public Object toObject() {
+    assert exists || 0 == value;
     return exists ? value : null;
   }
 
@@ -45,12 +48,14 @@ public class MutableValueInt extends MutableValue {
 
   @Override
   public boolean equalsSameType(Object other) {
+    assert exists || 0 == value;
     MutableValueInt b = (MutableValueInt)other;
     return value == b.value && exists == b.exists;
   }
 
   @Override
   public int compareSameType(Object other) {
+    assert exists || 0 == value;
     MutableValueInt b = (MutableValueInt)other;
     int ai = value;
     int bi = b.value;
@@ -64,6 +69,7 @@ public class MutableValueInt extends MutableValue {
 
   @Override
   public int hashCode() {
+    assert exists || 0 == value;
     // TODO: if used in HashMap, it already mixes the value... maybe use a straight value?
     return (value>>8) + (value>>16);
   }
